<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/gray_background"
    android:orientation="vertical">
    <include layout="@layout/title_bar" />
    <LinearLayout
        android:id="@+id/lLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/maincolor"
        android:minHeight="100dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:orientation="vertical">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/iv_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            fresco:placeholderImageScaleType="centerCrop"
            fresco:roundAsCircle="true"
            fresco:roundingBorderWidth="1dp" />


    </LinearLayout>



        <LinearLayout
            android:paddingLeft="12dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/phone"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">


                    <EditText
                        android:maxLength="11"
                        android:inputType="number"
                        android:id="@+id/phone_num"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:cursorVisible="true"
                        android:hint="@string/phone"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray_buttom_text"
                        android:textCursorDrawable="@null"
                        android:maxLines="1"
                        android:singleLine="true"/>


                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>
    <View style="@style/divider_wn_style" />

        <LinearLayout
            android:paddingLeft="12dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/code"></TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp">



                <EditText
                    android:id="@+id/code"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/code"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_buttom_text"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <Button
                    android:id="@+id/get_code"
                    android:layout_width="80dp"
                    android:layout_height="35dp"
                    android:textColor="@color/white"
                    android:text="@string/get_code"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:background="@drawable/shape_orage"
                     />

            </RelativeLayout>
        </LinearLayout>


    <View style="@style/divider_wn_style" />



        <LinearLayout
            android:paddingLeft="12dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/nickname"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">


                    <EditText
                        android:id="@+id/nick_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:cursorVisible="true"
                        android:hint="@string/nick_name"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray_buttom_text"
                        android:textCursorDrawable="@null"
                        android:maxLines="1"
                        android:singleLine="true"/>


                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>
    <View style="@style/divider_wn_style" />

        <LinearLayout
            android:paddingLeft="12dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/qq"></TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp">



                <EditText
                    android:id="@+id/qq"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/qq"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_buttom_text"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:singleLine="true"/>



            </RelativeLayout>
        </LinearLayout>


    <View style="@style/divider_wn_style" />



        <LinearLayout
            android:paddingLeft="12dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/wechat"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">


                    <EditText
                        android:id="@+id/wechat"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:cursorVisible="true"
                        android:hint="@string/wechat"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray_buttom_text"
                        android:textCursorDrawable="@null"
                        android:maxLines="1"
                        android:singleLine="true"/>


                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>
    <View style="@style/divider_wn_style" />

        <LinearLayout
            android:paddingLeft="12dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/referer_id"></TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp">



                <EditText
                    android:id="@+id/referrer_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/id"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_buttom_text"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:singleLine="true"/>



            </RelativeLayout>
        </LinearLayout>
    <View style="@style/divider_wn_style" />
    <LinearLayout
        android:paddingLeft="12dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/pwd"></TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp">



            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/pwd2"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_buttom_text"
                android:textCursorDrawable="@null"
                android:textSize="16sp"
                android:maxLines="1"
                android:singleLine="true"/>

            <ImageButton
                android:id="@+id/show_code_ib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:background="@color/white"
                android:src="@drawable/icon_pwd_close" />

        </RelativeLayout>
    </LinearLayout>


    <Button
        android:id="@+id/resiger"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_btn_bg_selector"
        android:enabled="false"
        android:gravity="center"
        android:text="注册"
        android:textColor="@color/white"
        android:textSize="18sp"
        style="@style/myBtn"/>

</LinearLayout>

