<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/gray_background"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />
    <LinearLayout
        android:id="@+id/lLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:background="@color/maincolor"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:orientation="vertical">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/iv_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            fresco:placeholderImageScaleType="centerCrop"
             />


    </LinearLayout>


        <LinearLayout
            android:background="@color/white"
            android:paddingLeft="12dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/account"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">


                    <EditText
                        android:id="@+id/login_account_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:cursorVisible="true"
                        android:hint="@string/accout"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray_buttom_text"
                        android:textCursorDrawable="@null"
                        android:maxLines="1"
                        android:singleLine="true"/>


                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>
    <View style="@style/divider_wn_style" />
        <LinearLayout
            android:background="@color/white"
            android:paddingLeft="12dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/pwd"></TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp">



                <EditText
                    android:id="@+id/login_pwd_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/pwd"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_buttom_text"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <ImageButton
                    android:id="@+id/show_code_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:background="@color/white"
                    android:src="@drawable/icon_pwd_close" />

            </RelativeLayout>
        </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_btn_bg_selector"
            android:enabled="false"
            android:gravity="center"
            android:text="登录"
            android:textColor="@color/white"
            android:textSize="18sp"
            style="@style/myBtn"/>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/btn_login"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/no_accout"
                android:textColor="@color/orage"
                android:clickable="true"
                android:text="@string/no_accout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/no_accout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>
